View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025762 | Open CASCADE | OCCT:Visualization | public | 2015-01-29 13:12 | 2015-05-14 15:32 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2013 | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025762: Visualization, TKOpenGl - fix debug assertion within OpenGl_Workspace::UploadRaytraceData() | ||||
Description | The front of empty std::vector is dereferenced within the following lines, leading to "vector iterator not dereferencable" assertion in debug mode:const NCollection_Handle<BVH_Tree<Standard_ShortReal, 3> >& aBVH = myRaytraceGeometry.BVH(); aResult &= mySceneNodeInfoTexture->SubData (myGlContext, 0, aBVH->Length(), reinterpret_cast<const GLuint*> (&aBVH->NodeInfoBuffer().front())); | ||||
Steps To Reproduce | v3d materials bug24872_2 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25762 has been created by kgv. SHA-1: fc977f3ca20dfabfa769714a4d127b9536647d4f Detailed log of new commits: Author: kgv Date: Thu Jan 29 13:14:49 2015 +0300 0025762: Visualization, TKOpenGl - fix debug assertion within OpenGl_Workspace::UploadRaytraceData() |
|
Patch is ready for review. |
|
Dear bugmaster, please test the patch. |
|
Dear BugMaster, Branch CR25762 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested in Release mode. SHA-1: fc977f3ca20dfabfa769714a4d127b9536647d4f Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions Testing cases: Not needed Testing on Linux: Total MEMORY difference: 369235776 / 370114884 Total CPU difference: 54712.28999999988 / 51750.710000000094 Testing on Windows: Total MEMORY difference: 275986756 / 275769192 Total CPU difference: 45229.671875 / 38148.296875 There are not differences in images found by testdiff. |
|
Branch CR25762 has been deleted by kgv. SHA-1: fc977f3ca20dfabfa769714a4d127b9536647d4f |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-01-29 13:12 | kgv | New Issue | |
2015-01-29 13:12 | kgv | Assigned To | => kgv |
2015-01-29 13:14 | git | Note Added: 0036809 | |
2015-01-29 13:15 | kgv | Note Added: 0036810 | |
2015-01-29 13:15 | kgv | Assigned To | kgv => dbp |
2015-01-29 13:15 | kgv | Severity | minor => trivial |
2015-01-29 13:15 | kgv | Status | new => resolved |
2015-01-29 13:15 | kgv | Summary | Visualization, TKOpenGl - debug assertion within OpenGl_Workspace::UploadRaytraceData() => Visualization, TKOpenGl - fix debug assertion within OpenGl_Workspace::UploadRaytraceData() |
2015-01-29 14:44 |
|
Note Added: 0036825 | |
2015-01-29 14:44 |
|
Assigned To | dbp => bugmaster |
2015-01-29 14:44 |
|
Status | resolved => reviewed |
2015-01-29 17:56 | apn | Assigned To | bugmaster => apn |
2015-01-30 10:09 | kgv | Relationship added | child of 0025703 |
2015-01-30 14:23 | apn | Note Added: 0036892 | |
2015-01-30 14:24 | apn | Test case number | => Not needed |
2015-01-30 14:24 | apn | Assigned To | apn => bugmaster |
2015-01-30 14:24 | apn | Status | reviewed => tested |
2015-02-06 15:38 | bugmaster | Changeset attached | => occt master 1e99558f |
2015-02-06 15:38 | bugmaster | Status | tested => verified |
2015-02-06 15:38 | bugmaster | Resolution | open => fixed |
2015-02-13 10:28 | git | Note Added: 0037486 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |